# credzin-vercel

./: .gitignore  Dockerfile  GEMINI.md  README.md  package-lock.json  pyproject.toml  requirements.txt
CoreServices/: build.gradle.kts
CoreServices/core-service/: settings.gradle.kts
CoreServices/core-service/credzin-core/: build.gradle.kts
CoreServices/core-service/credzin-merchant/: build.gradle.kts
CoreServices/core-service/credzin-reward/: build.gradle.kts
CoreServices/credzin-core/: build.gradle.kts
CoreServices/graphql/card/: card.graphql
CoreServices/graphql/core/: common.graphql
CoreServices/graphql/partner/: partner.graphql
CoreServices/graphql/products/: gift-card.graphql  voucher.graphql
CoreServices/graphql/user/: user.graphql
KnowledgeBase/StructuredCardsData/: cc_feats_V2.csv  cc_feats_V2_bkp.csv  cc_features.csv  cc_features_processed.csv  credit_card_details_V2.xlsx
KnowledgeBase/banks/IciciBank/: icici_bank_credit_cards.csv
KnowledgeBase/banks/SbiBank/: sbi_bank_credit_cards.csv
KnowledgeBase/sites/cardinsider/: credit_cards_AXIS_BANK.csv  credit_cards_AXIS_BANK_detail.csv  credit_cards_ICICI_BANK.csv  credit_cards_ICICI_BANK_detail.csv
Output/banks/: axis_bank_credit_cards.csv  sbi_bank_credit_cards.csv
Output/blogs/2025-06-21/: Credit_Card_Annual_Fees_in_India_2024.md  Write_a_detailed_article_about_hidden_costs_of_credit_cards_in_India.md
Output/blogs/2025-06-23/: best_credit_cards_2025.md  credit_card_benefits.md  credit_card_eligibility_criteria.md  credit_card_fees_and_charges.md  credit_card_issuer_policies.md  credit_card_reward_systems.md  credit_card_tiers_in_India.md  credit_card_welcome_bonuses.md  credit_cards_in_India.md
Output/blogs/2025-07-03/: Axis_Bank_Credit_Card_Review_2025_Which_Card_Should_You_Get.md
Output/blogs/2025-07-07/: Axis_Bank_Credit_Card_Review_2025_Which_Card_Should_You_Get_1.md  (+3 more)
airflow_home/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
pycode/: main.py  requirements.txt
pycode/test/: Marketing.py  TechWrite.py  crawler_firecrawl.py
resources/: card_features.md
scripts/: start.sh  sync_and_commit.sh  vercel_sync.sh
webapp/BillPayUPI/: upi_billpay.md
webapp/backend/: credentials.json  index.js  package-lock.json  package.json  test-file.js  vercel.json
webapp/frontend/: package-lock.json  package.json
(+1452 files in other folders)
